[project]
name = "export"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "pymysql>=1.1.1",
    "sqlalchemy>=2.0.36",
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = "tests"

[dependency-groups]
dev = [
    "debugpy>=1.8.9",
    "isort>=5.13.2",
    "neovim>=0.3.1",
    "pytest>=8.3.3",
    "sqlalchemy-utils>=0.41.2",
]
