[project]
name = "yahoo_export"
version = "0.2.0"
description = "Export the finance DB to a csv"
readme = "README.md"
author = [
  { name = "Jacques Desroches", email="jacques@desroches.ca" }
]
requires-python = ">=3.12"
dependencies = [
   "pandas>=2.2.3",
   "sqlalchemy>=2.0.36",
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = "tests"

[dependency-groups]
dev = [
    "debugpy>=1.8.9",
    "isort>=5.13.2",
    "neovim>=0.3.1",
    "pytest>=8.3.3",
    "sqlalchemy-utils>=0.41.2",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
